<resources>
    <string name="app_name">PCQ</string>
    <string name="texto_num1">1</string>
    <string name="texto_num2">2</string>
    <string name="texto_num3">3</string>
    <string name="texto_num4">4</string>
    <string name="texto_num5">5</string>
    <string name="texto_num6">6</string>
    <string name="texto_num7">7</string>
    <string name="texto_num8">8</string>
    <string name="texto_num9">9</string>
    <string name="texto_padrao_canc">APAGAR</string>
    <string name="texto_num0">0</string>
    <string name="texto_num00">00</string>
    <string name="texto_virg">,</string>
    <string name="texto_padrao_ok">OK</string>
    <string name="texto_atualizar_bd">ATUALIZAR DADOS</string>
    <string name="texto_responsavel">MATRIC. RESPONSÁVEL</string>
    <string name="texto_menu_principal">PRINCIPAL - V 1.02</string>
    <string name="texto_item_default">TESTE</string>
    <string name="texto_secao">NUM. SEÇÃO</string>
    <string name="texto_desmarcar">DESMARCAR TODOS</string>
    <string name="texto_marcar">MARCAR TODOS</string>
    <string name="texto_padrao_retornar">RETORNAR</string>
    <string name="texto_talhao">TALHÃO(ÕES)</string>
    <string name="texto_padrao_nao">NÃO</string>
    <string name="texto_padrao_sim">SIM</string>
    <string name="texto_veic_apoio">VEÍCULOS DE APOIO</string>
    <string name="texto_tanque">CAMINHÃO(ÕES) TANQUE</string>
    <string name="texto_saveiro">SAVEIROS</string>
    <string name="texto_brigadista">BRIGADISTA(S)</string>
    <string name="texto_terceiro">NOME DA EMPRESA</string>
    <string name="texto_org_ambiental">ORGÃO(ÕES) AMBIENTAL</string>
    <string name="texto_comentario">QUAIS AÇÕES FORAM TOMADAS PARA COMBATER O INCÊNDIO?</string>
    <string name="texto_nro_linha">NRO LINHA:</string>
    <string name="texto_padrao_cancelar">CANC.</string>
    <string name="texto_padrao_salvar">SALVAR</string>
    <string name="texto_foto">FOTO</string>
    <string name="texto_capturar">CAPTURAR</string>
    <string name="texto_status_canavial">STATUS CANAVIAL</string>
    <string name="texto_tipo_apont">TIPO APONTAMENTO</string>
    <string name="texto_aceiro_canavial">CONDIÇÕES DO ACEIRO - CANAVIAL (CARREADOR):</string>
    <string name="texto_aceiro_veget_nativa">CONDIÇÕES DO ACEIRO - VEGETAÇÃO NATIVA:</string>
    <string name="texto_origem_fogo">ORIGEM DO FOGO</string>
    <string name="texto_infor_cabecalho">CABEÇALHO</string>
    <string name="texto_padrao_avancar">AVANÇAR</string>
    <string name="texto_infor_criteiro">CRITÉRIOS</string>
    <string name="texto_app">ÁREA QUEIMADA DE APP(HA)</string>
    <string name="texto_fora_app">ÁREA QUEIMADA FORA DE APP(HA)</string>
    <string name="texto_terc_combate">TERCEIRO QUE AUXILIOU COMBATE</string>
    <string name="texto_excluir">EXCLUIR</string>
    <string name="texto_form_reaj">FORMULÁRIO(S) PARA REAJUSTE(S)</string>
    <string name="texto_term_form">TERMINAR FORMULÁRIO</string>
    <string name="texto_data">DATA</string>
    <string name="texto_abrir_galeria">ABRIR GALERIA</string>
    <string name="texto_hist_apont">PARADA: VERIFICACAO INICIAL</string>
    <string name="texto_hist_horario">10:08</string>
    <string name="texto_hist_impl_transb">TRANSBORDO: 1001</string>
    <string name="texto_titulo_log_proc">LOG - PROCESSO</string>
    <string name="texto_titulo_log_base_dado">LOG - BASE DADO</string>
    <string name="texto_titulo_log_erro">LOG - ERRO</string>
    <string name="texto_senha">SENHA:</string>
    <string name="texto_inicio">INICIANDO O APLICATIVO...</string>
</resources>
